文件分片上传

--- a/config.ini
+++ b/config.ini
@@ -1,25 +1,26 @@
-serveAddr=:8080
+serveAddr = :8088
+tusServer = 127.0.0.1:8080
 
 [log]
-logDir=./logs
-module=backend
-maxAge=168h
-rotationTime=24h
-debug=true
+logDir = ./logs
+module = backend
+maxAge = 168h
+rotationTime = 24h
+debug = true
 
 [redis]
-addr=127.0.0.1:6379
-passwd=123456
-db=0
+addr = 127.0.0.1:6379
+passwd = 123456
+db = 0
 
 [mysql]
-user=root
-passwd=123456
-db=db_csms
-host=127.0.0.1
-port=3306
-maxIdea=5
-maxOpen=100
+user = root
+passwd = 123456
+db = db_csms
+host = 127.0.0.1
+port = 3306
+maxIdea = 5
+maxOpen = 100
 
 [rabbitmq]
-uri=amqp://guest:guest@127.0.0.1:5672/csms
+uri = amqp://guest:guest@127.0.0.1:5672/csms
